ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress
spec:
 rules:
  - host: my-nginx.192.168.99.100.xip.io
    http:
     paths:
      - path: /
        backend:
         serviceName: nginx
         servicePort: 80
